welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value False
var vuBiscuit = False
                ^Program:-5: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:5: error: not found: value True
	   vuBiscuit = True
                       ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
        return;
        ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estSurBiscuit() == true) {
    ^