welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit = False
 def HaveBaggle():Boolean = {
    if (estSurBiscuit() == true) {
	   vuBiscuit = True
        return;
    }
}

for(i <- 1 to 7)
{
	avance()
	HaveBaggle()
}
